--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
  
 #logging configuration
-logging.file.name=C:\\logs\\timesheet-devops.log
+logging.file.name=/Users/mac/Desktop/devops/timesheet-devops.log
 logging.level.com.zaxxer.hikari=warn
 logging.level.org.springframework=warn 
 logging.level.root=INFO
